
- Renamed BlackScholedProcess to GeneralizedBlackScholedProcess;
  specialized classes added for Black-Scholes, Merton, Black and
  Garman-Kohlhagen processes.
